fix z-index

--- a/m2/s1/g2/base_di_partenza/assets/css/style.css
+++ b/m2/s1/g2/base_di_partenza/assets/css/style.css
@@ -30,7 +30,7 @@ header {
 
   position: sticky;
   top: 0;
-  z-index: 2;
+  z-index: 1;
 }
 
 @media screen and (min-width: 800px) {
@@ -400,7 +400,7 @@ footer a {
   position: fixed;
   bottom: 20px;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .btn-calendar,
@@ -408,7 +408,7 @@ footer a {
   position: fixed;
   bottom: 20px;
   right: 0;
-  z-index: 1;
+  z-index: 2;
 }
 
 .btn-calendar{
